# common-extension

./: .travis.yml  AUTHORS.md  Makefile.am  NEWS.md  README.md  autogen.sh  common.pc.in  configure.ac
build-aux/: js2c.sh
common/: Makefile.am  common.tar.xz
lib/: Makefile.am  common-api.js  common.c  common.h
m4/: check-tar.m4
packaging/: common-extension.spec
tests/: Makefile.am  atlocal.in  library.at  testsuite.at
